--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <h1>NgRx + Mapbox Tutorial</h1>
-<p>{{(geoJSON$ | async) | json}}</p>
 <mgl-map [center]="initialCenter" [zoom]="[initialZoom]" (load)="loadMap($event)" [style]="'assets/map.style.json'"
 	(moveEnd)="updateMap($event)">
-	<mgl-marker *ngFor="let feature of (geoJSON$ | async)?.features" [feature]="feature" >
+	<mgl-marker *ngFor="let feature of (geoJSON$ | async)?.features" [feature]="feature">
+		<div (click)="markerClick(feature)">
+			<img width="20" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Map_marker.svg/780px-Map_marker.svg.png" />
+    </div>
 	</mgl-marker>
 </mgl-map>
